# supero

./: .gitignore  .travis.yml  Analysis.hs  Church.hs  Convert.hs  CoreUtil.hs  Evaluate.hs  Evaluate2.hs  Evaluate3.hs  Evaluate4.hs  Evaluate5.hs  Evaluate6.hs  Firstify.hs  General.hs  Generate.hs  LambdaLift.hs  Main-old.hs  Main.hs  Match.hs  Nofib.hs  Normalise.hs  Options.hs  Prefix.txt  README.md  Report.hs  Revert.hs  Simplify.hs  StateFail.hs  Termination.hs  Type.hs  Unique.hs  bench.bat  bench2.bat  benchall.bat  make.bat  make.sh  nobench.bat  push.bat  supero.htm  test.bat
supero3/: .ghci  Desugar.hs  Main.hs  Simpler.hs  Simplify.hs  Supercompile.hs  Terminate.hs  Type.hs  Util.hs  supero.cabal
supero3/samples/: TagSoup.hs  nofib.txt
supero3/samples/nofib/: Primes.hs  Queens.hs  bernouilli.hs  bernouilli.opt.hs  digits-of-e1.hs  digits-of-e2.hs  digits-of-e2.opt.hs  exp3_8.hs  exp3_8.opt.hs  gen_regexps.hs  integrate.hs  primes.opt.hs  rfib.hs  tak.hs  wheel-sieve1.hs  wheel-sieve2.hs  x2n1.opt.hs
supero3/samples/other/: sumsquare.hs
supero3/samples/peter/: factorial.hs
supero3/samples/simple/: Evens.hs  Index.hs  Iterate.hs  MapMap.hs  Prims.hs  Rev.hs
supero4/: .ghci  CHANGES.txt  Exp.hs  HSE.hs  Include.h  Include.hs  LICENSE  Main.hs  Simplify.hs  Supercompile.hs  Support.hs  Terminate.hs  Type.hs  Util.hs  supero.cabal  travis.hs
supero4/Test/Jail/: AccRev.hs  AccSum.hs  AddMul.hs  Concats.hs  MapFold.hs
supero4/Test/Nofib/: Bernouilli.hs  Digits_of_e1.hs  Digits_of_e2.hs  Exp3_8.hs  Gen_regexps.hs  Integrate.hs  Paraffins.hs  Primes.hs  Queens.hs  Rfib.hs  Tak.hs  X2n1.hs
supero4/Test/Other/: Digits_of_e1_part1.hs  Digits_of_e1_part2.hs  Sumsquare.hs
supero4/Test/Peter/: Append.hs  Factorial.hs  Raytracer.hs  Sumtree.hs  Treeflip.hs
supero4/Test/Simple/: Evens.hs  Index.hs  Iterate.hs  MapId.hs  MapMap.hs  Prims.hs  Rev.hs  SumZip.hs  SumZip2.hs
supero4/samples/: TagSoup.hs  nofib.txt
supero4/samples/nofib/: compile.bat  gen_regexps.hs  paraffins.hs  primes.hs  tak.hs  wheel-sieve2.hs  x2n1.hs
supero4/samples/other/: sumsquare.hs
supero4/samples/peter/: append.hs  raytracer.hs  (+2 more)
(+128 files in other folders)
