cabal-version:      >= 1.6
build-type:         Simple
name:               supero
version:            3.0
license:            BSD3
license-file:       LICENSE
category:           Compiler
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2006-2010
synopsis:           A Supercompiler
description:
    A demo supercompiler - not really ready for public use yet.
homepage:           http://community.haskell.org/~ndm/supero/
stability:          Beta

executable supero
    build-depends:      base == 4.*, directory, process, filepath, time, mtl, containers,
                        haskell-src-exts == 1.9.0, cpphs == 1.11, uniplate == 1.5.*
    hs-source-dirs:     .
    main-is:            Main.hs
    other-modules:
        Simplify
        Supercompile
        Terminate
        Type
        Util
