cabal-version:      >= 1.6
build-type:         Simple
name:               supero
version:            4.0
license:            BSD3
license-file:       LICENSE
category:           Compiler
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2006-2014
synopsis:           A Supercompiler
description:
    A demo supercompiler - not really ready for public use yet.
homepage:           http://community.haskell.org/~ndm/supero/
bug-reports:        https://github.com/ndmitchell/supero/issues
tested-with:        GHC==7.8.2, GHC==7.6.3
extra-source-files:
    CHANGES.txt

source-repository head
    type:     git
    location: https://github.com/ndmitchell/supero.git

executable supero
    build-depends:      base == 4.*, directory, process, filepath, time, mtl, containers,
                        haskell-src-exts, transformers, cpphs, uniplate, safe
    hs-source-dirs:     .
    main-is:            Main.hs
    other-modules:
        Exp
        HSE
        Simplify
        Supercompile
        Support
        Util
